--- a/style.css
+++ b/style.css
@@ -63,3 +63,30 @@ header h1 {
 
   margin: 0 auto;
 }
+
+#history-section {
+  margin-top: 10rem;
+}
+
+.article-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
+article h2 {
+  font-size: 2.5rem;
+  font-family: "Corinthia", cursive;
+}
+
+article img,
+article p {
+  width: 390px;
+  height: 250px;
+}
