--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ a {
   cursor: pointer;
 }
 
+button {
+  cursor: pointer;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -89,4 +93,45 @@ article img,
 article p {
   width: 390px;
   height: 250px;
+}
+
+#newsletter-section .container {
+  padding: 1rem;
+
+  border-radius: 4px;
+  background-color: #222222;
+}
+
+.newsletter-title h2,
+.newsletter-title span {
+  color: #fff;
+}
+
+.newsletter-title span {
+  font-style: italic;
+}
+
+#newsletter-section form input {
+  width: 250px;
+
+  padding: 0.75rem;
+  margin-right: 1rem;
+
+  border: none;
+  border-radius: 6px;
+}
+
+#newsletter-section form input:focus {
+  outline: none;
+}
+
+#newsletter-section form button {
+  margin-left: 1rem;
+
+  background: none;
+  border: none;
+
+  font-size: 1.125rem;
+  font-style: italic;
+  color: #fff;
 }
