--- a/style.css
+++ b/style.css
@@ -72,27 +72,23 @@ header h1 {
   margin-top: 10rem;
 }
 
-.article-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5rem;
-}
-
-article {
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-}
-
 article h2 {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
   font-family: "Corinthia", cursive;
 }
 
-article img,
-article p {
-  width: 390px;
-  height: 250px;
+article img {
+  width: 800px;
+}
+
+.img-and-paragraph {
+  display: flex;
+  align-items: flex-start;
+  gap: 3rem;
+}
+
+#newsletter-section {
+  margin: 2.5rem 0;
 }
 
 #newsletter-section .container {
