--- a/style.css
+++ b/style.css
@@ -147,3 +147,13 @@ article img {
   flex-direction: column;
   gap: 1.5rem;
 }
+
+footer {
+  margin-top: 5rem;
+  padding: 1.5rem 0.5rem;
+
+  text-align: center;
+
+  color: #fff;
+  background-color: #222222;
+}
